<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintInvest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:id="@+id/invest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="30dp"
        android:text="@string/contact_title"
        android:textAlignment="center"
        android:fontFamily="@font/dinpro_regular"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="150dp"
        android:text="@string/thank_you"
        android:textAlignment="center"
        android:fontFamily="@font/dinpro_light"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invest" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/success"
        android:textAlignment="center"
        android:fontFamily="@font/dinpro_bold"
        android:textColor="@color/darkGrey"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thanks" />

    <TextView
        android:id="@+id/backToForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="110dp"
        android:text="@string/back_to_form"
        android:textAlignment="center"
        android:fontFamily="@font/dinpro_regular"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

</android.support.constraint.ConstraintLayout>