<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_network_state"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintInvest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:id="@+id/investmentTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/investment_title"
            android:textAlignment="center"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="@font/dinpro_light"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/investmentTxt" />

        <TextView
            android:id="@+id/fundNameTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/dinpro_bold"
            android:textColor="@color/darkGrey"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

        <View
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fundNameTxt" />

        <TextView
            android:id="@+id/whatIsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space" />

        <TextView
            android:id="@+id/definitionTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/dinpro_light"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whatIsTxt" />

        <TextView
            android:id="@+id/riskTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/definitionTxt" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/risk_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/riskTitleTxt">

            <include layout="@layout/layout_risk_graph"/>

        </android.support.constraint.ConstraintLayout>
        <TextView
            android:id="@+id/infoTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/risk_graph" />

        <TextView
            android:id="@+id/fundTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="4dp"
            android:text="@string/fund"
            android:textAlignment="textStart"
            android:fontFamily="@font/dinpro_light"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoTitleTxt" />

        <TextView
            android:id="@+id/cdiTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="4dp"
            android:text="@string/cdi"
            android:textAlignment="textEnd"
            android:fontFamily="@font/dinpro_light"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoTitleTxt" />


        <TextView
            android:id="@+id/monthTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/month"
            android:textAlignment="textStart"
            android:fontFamily="@font/dinpro_light"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fundTxt" />

        <TextView
            android:id="@+id/monthFundTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:textAlignment="textEnd"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fundTxt" />

        <TextView
            android:id="@+id/monthCdiTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:textAlignment="textEnd"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fundTxt" />

        <TextView
            android:id="@+id/yearTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/year"
            android:textAlignment="textStart"
            android:fontFamily="@font/dinpro_light"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthTxt" />

        <TextView
            android:id="@+id/yearFundTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="8dp"
            android:textAlignment="textEnd"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthFundTxt" />

        <TextView
            android:id="@+id/yearCdiTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="8dp"
            android:textAlignment="textEnd"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthCdiTxt" />

        <TextView
            android:id="@+id/monthsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/months"
            android:textAlignment="textStart"
            android:fontFamily="@font/dinpro_light"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearTxt" />

        <TextView
            android:id="@+id/monthsFundTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="8dp"
            android:textAlignment="textEnd"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearFundTxt" />

        <TextView
            android:id="@+id/monthsCdiTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="8dp"
            android:textAlignment="textEnd"
            android:fontFamily="@font/dinpro_regular"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearCdiTxt" />

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:background="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthsTxt" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleViewInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@+id/cdiTxt"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:listitem="@layout/layout_ivestment_item"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/invest_btn"
            android:text="@string/invest_btn"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycleViewInfo" />

    </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>